--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app"
+    "start": "node app",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
     "git-commit-msg-linter": "^3.2.6",
-    "husky": "^4.3.0",
-    "lint-staged": "^10.5.3",
+    "husky": "^7.0.1",
+    "lint-staged": "^11.1.2",
     "typescript": "^4.3.5"
   }
 }
